--- a/.github/workflows/run-maestro-tests.yml
+++ b/.github/workflows/run-maestro-tests.yml
@@ -28,9 +28,46 @@ jobs:
         working-directory: example
         run: bun run build:android-release
       
-      - name: Run Maestro tests
-        working-directory: example
-        run: bun run maestro test
+      
+      - name: Installing Maestro
+        shell: bash
+        run: export MAESTRO_VERSION=1.40.0; curl -Ls "https://get.maestro.mobile.dev" | bash
+      
+      - name: Enable KVM group perms
+        shell: bash
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+      
+      - name: Run e2e tests
+        id: run-tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: '34'
+          target: google_apis
+          arch: x86_64
+          profile: Nexus 6
+          ram-size: '8192M'
+          heap-size: '4096M'
+          disk-size: '10G'
+          cores: '4'
+          disable-animations: false
+          avd-name: e2e_emulator
+          script: |
+            cd example && bun run maestro:ci
+            
+      - name: Store tests result
+        uses: actions/upload-artifact@v4.3.4
+        if: always()
+        with:
+          name: TestResult
+          path: |
+            *.mp4
+      
+      
+    
+      
 
       
     
