--- a/.github/workflows/run-maestro-tests.yml
+++ b/.github/workflows/run-maestro-tests.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run Gradle Build for example/android/
         working-directory: example
-        run: bun run build:android-release
+        run: bun run build:android-x86-64
       
       
       - name: Installing Maestro
@@ -48,22 +48,23 @@ jobs:
           target: google_apis
           arch: x86_64
           profile: Nexus 6
-          ram-size: '8192M'
-          heap-size: '4096M'
+          ram-size: '16G'
+          heap-size: '10G'
           disk-size: '10G'
-          cores: '4'
+          cores: '12'
           disable-animations: false
           avd-name: e2e_emulator
           script: |
             cd example && bun run maestro:ci
-            
+
       - name: Store tests result
         uses: actions/upload-artifact@v4.3.4
         if: always()
         with:
           name: TestResult
           path: |
-            *.mp4
+            example/*.mp4
+            example/maestro/*.mp4
       
       
     
