--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -11,6 +11,7 @@ on:
       - '**/nitrogen/generated/android/**'
       - 'packages/react-native-nitro-test/cpp/**'
       - 'packages/react-native-nitro-test/android/**'
+      - 'packages/react-native-nitro-test/rust/**'
       - 'packages/react-native-nitro-test-external/cpp/**'
       - 'packages/react-native-nitro-test-external/android/**'
       - 'packages/react-native-nitro-modules/cpp/**'
@@ -26,6 +27,7 @@ on:
       - '**/nitrogen/generated/android/**'
       - 'packages/react-native-nitro-test/cpp/**'
       - 'packages/react-native-nitro-test/android/**'
+      - 'packages/react-native-nitro-test/rust/**'
       - 'packages/react-native-nitro-test-external/cpp/**'
       - 'packages/react-native-nitro-test-external/android/**'
       - 'packages/react-native-nitro-modules/cpp/**'
@@ -59,6 +61,23 @@ jobs:
           distribution: 'zulu'
           java-version: 17
           java-package: jdk
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          components: rustfmt, clippy
+
+      - name: Install Android NDK targets for Rust
+        run: |
+          rustup target add armv7-linux-androideabi
+          rustup target add aarch64-linux-android
+          rustup target add x86_64-linux-android
+          rustup target add i686-linux-android
+
+      - name: Install cargo-ndk
+        run: cargo install cargo-ndk --quiet
+
 
       - name: Restore Gradle cache
         uses: actions/cache@v4
