--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -33,7 +33,7 @@ on:
       - '**/bun.lock'
       - '**/react-native.config.js'
       - '**/nitro.json'
-
+  workflow_dispatch
 jobs:
   build:
     name: Build Android Example App
