--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+    workflow_dispatch:
     paths:
       - '.github/workflows/build-android.yml'
       - 'example/android/**'
@@ -33,7 +34,7 @@ on:
       - '**/bun.lock'
       - '**/react-native.config.js'
       - '**/nitro.json'
-  workflow_dispatch
+  
 jobs:
   build:
     name: Build Android Example App
